--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"> <img src="./images/Hiring Mine Logo-453a72d3.png" alt="Hiring MIne Logo" width="200rem"> </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand col-6 col-sm-6 col-md-6"  href="#"> <img src="./images/Hiring Mine Logo-453a72d3.png" alt="Hiring MIne Logo" width="200rem"> </a>
+          <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          </button> -->
+          <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
             <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0"> -->
               <!-- <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -39,12 +39,12 @@
                 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
               </li> -->
             <!-- </ul> -->
-            <form class="d-flex m-3 m-lg-0 " role="search">
+            <form class="d-flex m-3 m-lg-0 col-6" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
           </div>
-        </div>
+        <!-- </div> -->
       </nav>
 
 
