--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
               </li> -->
             <!-- </ul> -->
-            <form class="d-flex m-3 m-lg-0 col-6 m-2" role="search">
-              <input id="searchvalue" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <form class="d-flex m-3 m-lg-0 col-3 m-2" role="search">
+              <input id="searchvalue" class="me-2" type="search" placeholder="Search" aria-label="Search">
               <button id="searchbutton" class="btn btn-outline-success" onclick="gettingApi()">Search</button>
             </form>
           </div>
