--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- navigation bar section -->
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand col-6 col-sm-6 col-md-6 m-2"  href="#"> <img src="./images/Hiring Mine Logo-453a72d3.png" alt="Hiring MIne Logo" width="200rem"> </a>
+        <div class="container">
+          <a class="navbar-brand col-lg-6 col-sm-6 col-md-6 m-2"  href="#"> <img src="./images/Hiring Mine Logo-453a72d3.png" alt="Hiring MIne Logo" width="200rem"> </a>
           <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button> -->
@@ -39,8 +39,8 @@
                 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
               </li> -->
             <!-- </ul> -->
-            <form class="d-flex m-3 m-lg-0 col-3 m-2" role="search">
-              <input id="searchvalue" class="me-2" type="search" placeholder="Search" aria-label="Search">
+            <form class="d-flex m-3 m-lg-0 col-sm-12 col-lg-6 col-md-6 m-2" role="search">
+              <input id="searchvalue" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button id="searchbutton" class="btn btn-outline-success" onclick="gettingApi()">Search</button>
             </form>
           </div>
@@ -56,7 +56,7 @@
     
         <div class="container " >
             <div class="row com justify-content-center align-items-center">
-                <div  >
+                <div>
 
                   <!-- <div class="bg-white p-3" style="border-radius: 10px; box-shadow: 0px 10px 18px -3px rgba(7,4,0,5.1);">
                     <div class="d-flex justify-content-between align-items-center w-100">
