--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <!-- navigation bar section -->
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container">
-          <a class="navbar-brand col-lg-6 col-sm-6 col-md-6 m-2"  href="#"> <img src="./images/Hiring Mine Logo-453a72d3.png" alt="Hiring MIne Logo" width="200rem"> </a>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary"  >
+        <div class="container" >
+          <a class="navbar-brand col-lg-6 col-sm-6 col-md-6 "  href="#"> <img src="./images/Hiring Mine Logo-453a72d3.png" alt="Hiring MIne Logo" width="200rem"> </a>
           <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button> -->
@@ -54,7 +54,7 @@
 
 
     
-        <div class="container " >
+        <div class="container" >
             <div class="row com justify-content-center align-items-center">
                 <div>
 
